files/script/test/parse_error/block/test_block_recursive.ll

def main()
{
    var i

    for(i = 0; i< 10; i+=1)){
        i = 100
    }

}
#script("test/parse_error/block/test_block_recursive.nl")
